--- a/.github/workflows/update-main-repo.yml
+++ b/.github/workflows/update-main-repo.yml
@@ -3,31 +3,31 @@ name: Update Submodule
 on:
   push:
     branches:
-      - main  # Adjust this to your branch
+      - main
 
 jobs:
   update_submodule:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write  # Grant write access to the repository contents
+      contents: write
 
     steps:
       - name: Checkout main repository
         uses: actions/checkout@v2
         with:
-          repository: MrGoblings/MrGoblings  # Your main repo
-          token: ${{ secrets.GITHUB_TOKEN }}  # Automatically provided token
-          path: main_repo  # Path where the main repo will be checked out
+          repository: MrGoblings/MrGoblings
+          token: ${{ secrets.GITHUB_TOKEN }}
+          path: main_repo
 
       - name: Set up Git user
         run: |
-          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"  # Use the secret for email
-          git config --global user.name "${{ secrets.GIT_USER_NAME }}"  # Use the secret for name
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+          git config --global user.name MrGoblings
 
       - name: Update submodule
         run: |
-          git -C main_repo submodule update --remote --merge  # Update submodules
+          git -C main_repo submodule update --remote --merge
 
       - name: Check for changes
         id: check_changes
